--- a/webroot/scss/templates/splash.scss
+++ b/webroot/scss/templates/splash.scss
@@ -13,9 +13,18 @@ section#splash.pane {
   background-repeat : no-repeat;
   z-index           : 9000;
   vertical-align    : middle;
+  transition: background-image 0.3s ease-in-out;
   div, a { position : relative; }
-
+  nav {
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:3rem;
+    background-color:$black-a33;
+  }
   #grand-opening-deal {
+    visibility: hidden;
     position          : fixed;
     margin            : 0 auto;
     z-index           : 9050;
@@ -26,8 +35,8 @@ section#splash.pane {
     height            : rem-calc(570px);
     @include mouse-memoirs;
     color             : $text-grey;
-    //    padding-top:rem-calc(120px);
-    //    padding-left:rem-calc(60px);
+    padding-top:rem-calc(120px);
+    padding-left:rem-calc(60px);
     div:first-of-type {
       h3, h4 { font-family : inherit; }
       h3 {
@@ -68,28 +77,36 @@ section#splash.pane {
   }
   #splash-circle-wrapper {
     width:100%;
-    perspective:600px;
+
   }
   #splash-circle {
-    min-height          : rem-calc(600px);
+    min-height          : rem-calc(400px);
     height              : 100%;
-    min-width           : rem-calc(600px);
+    min-width           : rem-calc(400px);
     width               : auto;
     background-image    : url('../img/splash/bluecircle.png');
     background-position : center;
     background-size     : contain;
     background-repeat   : no-repeat;
-//    &.stow {
-//      transform:
-//    }
+    transition: transform 1s;
+
+    &.flipped {
+      ms-transform: rotateY(450deg);
+      -webkit-transform:rotateY(450deg);
+      transform: rotateY(450deg);
+    }
+  }
+  #menu-wrapper, #order-wrapper {
+    height:40%;
   }
   #order, #menu {
+    position:relative;
     display           : block;
-    height            : spacer-height($splash-bar-height);
-    width             : rem-calc(392px);
+    width             : rem-calc(240px);
+    height            : 40%;
     margin            : 0 auto;
     background-repeat : no-repeat;
-    background-size   : auto 50%;
+    background-size   : contain;
     transition        : background-image 0.3s ease-out;
   }
   #order {
@@ -116,6 +133,7 @@ section#splash.pane {
     @include splash-bar-gradient;
     border-top    : 1px solid $dark-grey;
     border-bottom : 1px solid $dark-grey;
+    box-shadow:0 0 10% #000;
   }
   #splash-logo-wrapper {
     z-index  : 9030;
@@ -124,7 +142,7 @@ section#splash.pane {
     position : relative;
     margin   : 0 auto;
   }
-  #splash-logo {
+  #splash-logo, #splash-logo_fasten-clone {
     background-image    : url('../img/splash/logo.png');
     background-repeat   : no-repeat;
     background-position : center center;
