Major Design changes; menu 0.7a

--- a/webroot/scss/_settings.scss
+++ b/webroot/scss/_settings.scss
@@ -126,7 +126,7 @@ $primary-color: #008CBA;
 //$header-font-family:"Fredericka the Great";
 // $header-font-weight: $font-weight-normal;
 // $header-font-style: normal;
-$header-font-color: white;
+//$header-font-color: white;
 // $header-line-height: 1.4;
 // $header-top-margin: .2rem;
 // $header-bottom-margin: .5rem;
