--- a/webroot/scss/app.scss
+++ b/webroot/scss/app.scss
@@ -11,6 +11,7 @@
 
 // TEMPLATES                // z-indices
 @import "templates/splash"; // 9000-series
+@import "templates/main";   // 8000-series
 @import "templates/menu";   // 8000-series
 
 
