--- a/webroot/scss/templates/menu.scss
+++ b/webroot/scss/templates/menu.scss
@@ -10,4 +10,13 @@ li.orbcard {
   border:1px solid rgb(125,125,125);
   background-color:$white;
   border-radius: $big-radius;
+  dd,dt {
+    display:inline-block;
+    clear:both;
+  }
+}
+
+img.orb-card-thumb {
+  width:6rem;
+  height:6rem;
 }
