Major design release; menu navigation nearly done; new login panel

--- a/webroot/scss/app.scss
+++ b/webroot/scss/app.scss
@@ -1,4 +1,3 @@
-@import "defs";
 @import "palette";
 
 // foundation imports
@@ -6,8 +5,11 @@
 @import "foundation";
 
 // SITEWIDE
+@import "defs";
+@import "globals";
 @import "structure";
 @import "typography";
+@import "nav";
 
 // TEMPLATES                // z-indices
 @import "templates/splash"; // 9000-series
