--- a/webroot/scss/defs.scss
+++ b/webroot/scss/defs.scss
@@ -16,11 +16,34 @@
   filter            : FlipH;
   -ms-filter        : "FlipH";
 }
+
+@mixin portraitBG() {
+  background-repeat: no-repeat;
+  background-size:contain;
+  background-position:center;
+}
+
+@mixin tightContent() {
+  padding:0;
+  margin:0;
+}
+
+@mixin disableWithOpacity($opacity: 0.33) {
+  &.disabled {
+    opacity:$opacity;
+  }
+}
+
+@mixin globalTrans($attr) {
+  transition: $attr 0.3s ease-out;
+}
 //-------------------------------------------------------------------------------------------------------------TEMPLATES
+$topnav-height: rem-calc(90);
+$topnav-h1-padding: 0 0 0 0;
+$topnav-h1-margin: (0.9*$topnav-height - $h1-font-size)/2 rem-calc(10px) 0 rem-calc(10px);
+$topnav-h1-height: $topnav-height - $topnav-h1-padding - $topnav-h1-margin;
 // SPLASH
 $splash-content-height: 80%;
 $splash-bar-height:20%;
 $splash-logo-height: 90%;
-
-
 $big-radius: 16px;
