--- a/webroot/scss/palette.scss
+++ b/webroot/scss/palette.scss
@@ -1,8 +1,10 @@
 // COLORS
 $dark-grey: rgb(25,25,25);
 $text-grey: rgb(55,55,55);
+$black-a75: rgba(0,0,0,.75);
 $black-a50: rgba(0,0,0,.5);
 $black-a33: rgba(0,0,0,.33);
+$black-a15: rgba(0,0,0,.15);
 $white-a33: rgba(255,255,255,.33);
 $body-bg-color: rgb(223,223,223); // grey averaged from bg-pattern(bullseyes)
 
