--- a/webroot/scss/typography.scss
+++ b/webroot/scss/typography.scss
@@ -16,3 +16,19 @@
 }
 
 h1.orb-card, h2.orb-card, h3.orb-card, h4.orb-card, h5.orb-card { @include HelveticaBlCn;}
+
+h1.nav {
+  @include Fredericka;
+  color:white;
+  font-weight       : normal;
+  margin: $topnav-h1-margin;
+  padding: $topnav-h1-padding;
+  height: $topnav-h1-height;
+  line-height: $topnav-h1-height;
+  &.selected { border-bottom:1px double $white; }
+  @include disableWithOpacity(0.33);
+  @include globalTrans(text-shadow);
+  &:hover {
+    text-shadow: 0 0 rem-calc(8px) $white;
+  }
+}
