--- a/webroot/scss/globals.scss
+++ b/webroot/scss/globals.scss
@@ -9,3 +9,5 @@ button.unavailable {
   background-image:url("../img/order_coming_soon.png");
   @include portraitBG;
 }
+
+.tight { @include tightContent();}
