Major but incomplete design advancement; especially bootstrap.js

--- a/webroot/scss/app.scss
+++ b/webroot/scss/app.scss
@@ -6,12 +6,14 @@
 
 // SITEWIDE
 @import "defs";
+@import "typography";
 @import "globals";
 @import "structure";
-@import "typography";
+@import "buttons";
 @import "nav";
 
 // TEMPLATES                // z-indices
+@import "templates/loading_screen"; // 9999
 @import "templates/splash"; // 9000-series
 @import "templates/main";   // 8000-series
 @import "templates/menu";   // 8000-series
