--- a/webroot/scss/globals.scss
+++ b/webroot/scss/globals.scss
@@ -9,5 +9,13 @@ button.unavailable {
   background-image:url("../img/order_coming_soon.png");
   @include portraitBG;
 }
-
+.image-loader-object { display:none;}
 .tight { @include tightContent();}
+.hidden { display:none;}
+
+*[data-scrolling-target] {
+  background-color:rgba(255,0,0,.2);
+}
+
+
+
