--- a/webroot/scss/structure.scss
+++ b/webroot/scss/structure.scss
@@ -1,12 +1,24 @@
 //FRAMES & CONTAINERS
+body {
+ // overflow:hidden;
+}
+#image-loading-queue {
+  display:none;
+}
+
 .pane {
-  position:fixed;
+//  position:fixed;
   top:0;
   left:0;
   width:100%;
   height:100%;
+  overflow:hidden;
   z-index:1; //by default; should be overwritten by template
 }
+.l-0 { z-index:9999;}
+.l-1 { z-index:9000;}
+.l-2 { z-index:8000;}
+.l-3 { z-index:7000;}
 .spacer { @include unselectable; }
 .content-area {padding:1rem}
 .top-spacer { height:1rem;}
@@ -15,7 +27,7 @@ section.content {padding-top:1rem;}
 ul.container {
     list-style-type : none;
     margin          : 0;
-  }
+ }
 
 
 // DECORATION CLASSES
