--- a/webroot/scss/defs.scss
+++ b/webroot/scss/defs.scss
@@ -34,16 +34,36 @@
   }
 }
 
-@mixin globalTrans($attr) {
+@mixin global-transition($attr) {
   transition: $attr 0.3s ease-out;
 }
+
+/* TYPOGRAPHY */
+$button-font-family: "Helvetica Neue Condensed Black";
+$user-activity-panel-font-size: rem-calc(21px);
 //-------------------------------------------------------------------------------------------------------------TEMPLATES
 $topnav-height: rem-calc(90);
 $topnav-h1-padding: 0 0 0 0;
 $topnav-h1-margin: (0.9*$topnav-height - $h1-font-size)/2 rem-calc(10px) 0 rem-calc(10px);
 $topnav-h1-height: $topnav-height - $topnav-h1-padding - $topnav-h1-margin;
-// SPLASH
+
+$focus-pane-height: rem-calc(360);
+
+
+/*  SPLASH  */
 $splash-content-height: 80%;
 $splash-bar-height:20%;
 $splash-logo-height: 90%;
 $big-radius: 16px;
+
+
+/*   MENU   */
+$orbcat-border-width: 1px;
+$orbcat-border-factor: 10%;
+$orbcat-border-factor-2: 15%;
+$orb-card-stage-height: rem-calc(360px); // todo: media queries yo
+$orb-card-stage-width: rem-calc(1000px);
+$orb-card-height: rem-calc(320px);
+$orb-card-width: rem-calc(600px);
+$user-activity-panel-height: rem-calc(100);
+$user-activity-panel-width: rem-calc(100);
