--- a/webroot/scss/nav.scss
+++ b/webroot/scss/nav.scss
@@ -1,39 +1,21 @@
-
 //----------------------------------------------------------------------------------------------------------------TOPNAV
-nav#topnav {
-  background-image  : url("../img/xtreme-red-gradient.png");
-  background-repeat : repeat-x;
-  background-size   : 100% $topnav-height;
-  z-index           : 8800;
-  height    : $topnav-height;
-  @include tightContent();
-  ul {
-    height: inherit;
-    li {
-      @include tightContent();
-      height:inherit;
-      &.ornament {
-        height              : inherit;
-        background-image    : url("../img/ornament.png");
-        background-size     : 50%;
-        background-repeat   : no-repeat;
-        background-position : center center;
-        &.right {
-        }
-      }
-    }
-  }
-
+nav#topbar {
+  background-color: $dark-grey;
+  height: $topbar-height;
+  width:100%;
+  position:fixed;
+  top:0;
+  left:0;
+  z-index           : 9999;
+//  box-shadow: 0 5px 8px $black-a15;
 }
 
 //----------------------------------------------------------------------------------------------------------------SUBNAV
 nav#subnav {
-  min-height  : 2000px;
+  width: 300px;
   padding-top : 2rem;
   text-align  : center;
   z-index     : 8900;
-  @include mouse-memoirs;
-
   ul {
     list-style-type : none;
     text-align      : center;
@@ -50,8 +32,11 @@ nav#subnav {
     }
   }
 }
+
 //-------------------------------------------------------------------------------------------------------------------TOC
 nav#subnav-toc {
+  position:fixed;
+  right:0;
   background-color : $white-a33;
   box-shadow       : 0px 0px 1rem $black-a15;
   min-height       : 2000px;
@@ -72,30 +57,16 @@ nav#subnav-toc {
   }
 }
 
-nav.scroll-area {
-  display          : none;
-  position         : relative;
-  width            : 100%;
-  height           : 3rem;
-  background-color : red;
-  &.top {
-    float : top;
-    //    top:0;
-  }
-  &.bottom {
-    float : bottom;
-    //    bottom:0;
-  }
-}
 
 nav#login {
   position         : fixed;
-  bottom           : 0;
+  top           : $topbar-height;
   left             : 0;
   width            : 10%;
   height           : 100%;
   background-color : $black-a33;
-  z-index          : 9040;
+  z-index          : 1;
+//  margin-top: $topbar-height;
   padding-top      : 2rem;
   h2 {
     color : $white;
