--- a/webroot/scss/palette.scss
+++ b/webroot/scss/palette.scss
@@ -1,19 +1,28 @@
 // COLORS
 $dark-grey: rgb(25,25,25);
 $text-grey: rgb(55,55,55);
+$black: rgba(0,0,0,1);
 $black-a75: rgba(0,0,0,.75);
 $black-a50: rgba(0,0,0,.5);
 $black-a33: rgba(0,0,0,.33);
+$black-a25: rgba(0,0,0,.33);
 $black-a15: rgba(0,0,0,.15);
+$white-a16: rgba(255,255,255,.16);
 $white-a33: rgba(255,255,255,.33);
 $body-bg-color: rgb(223,223,223); // grey averaged from bg-pattern(bullseyes)
-
+//$cg1: rgb(243,226,51);
+$cg1: rgb(252,159,86);
+//$cg2: rgb(35,88,114);
+$cg2: rgb(108,147,168);
+//$cg3: rgb(240,47,60);
+$cg3: rgb(240,47,60);
 $xtreme-blue:rgb(7,121,190);
-$xtreme-red:rgb(224,32,39);
+$xtreme-red:rgb(172,8,25);
 $xtreme-yellow:rgb(250,234,6);
+$xtreme-orange: rgb(255, 89, 0);
 $black: rgb(0,0,0);
 $white: rgb(255,255,255);
-
+$dark-grey: rgb(25,25,25);
 // GRADIENTS
 @mixin topbar-gradient() {
   background: #f9f17c; /* Old browsers */
