--- a/webroot/scss/structure.scss
+++ b/webroot/scss/structure.scss
@@ -1,34 +1,43 @@
 //FRAMES & CONTAINERS
-body {
- // overflow:hidden;
-}
-#image-loading-queue {
-  display:none;
+section { margin-bottom : 1rem; }
+
+.inline-wrapper {
+  display:inline-block;
+  vertical-align: top;
 }
 
-.pane {
-//  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  overflow:hidden;
-  z-index:1; //by default; should be overwritten by template
+.block { display: block; }
+.box-wrapper {
+  border:8px solid $white;
+  box-shadow:5px 5px 35px rgba(0,0,0,.75);
 }
-.l-0 { z-index:9999;}
-.l-1 { z-index:9000;}
-.l-2 { z-index:8000;}
-.l-3 { z-index:7000;}
+section.pagespan {
+  height            : $focus-pane-height;
+  margin-top        : rem-calc(15);
+  background-repeat : no-repeat;
+  background-size   : cover;
+}
+
+.l-0 { z-index : 9999; }
+.l-1 { z-index : 9000; }
+.l-2 { z-index : 8000; }
+.l-3 { z-index : 7000; }
+
 .spacer { @include unselectable; }
-.content-area {padding:1rem}
-.top-spacer { height:1rem;}
-section.content {padding-top:1rem;}
-.content-area { position:relative; max-height:80%; overflow-y:visible;}
+
+
 ul.container {
-    list-style-type : none;
-    margin          : 0;
- }
+  margin : 0;
+}
 
+ul.horizontal {
+  li {
+    display:inline-block;
+  }
+}
 
+ul.vertical {
+  li { display:block;}
+}
 // DECORATION CLASSES
 .xtreme-blue { background-color : $xtreme-blue; }
