--- a/webroot/scss/templates/loading_screen.scss
+++ b/webroot/scss/templates/loading_screen.scss
@@ -1,6 +1,8 @@
 #loadingScreen {
   @include unselectable;
   position:fixed;
+  top:0;
+  left:0;
   z-index:999999;
   width:100%;
   height:100%;
