--- a/webroot/scss/templates/main.scss
+++ b/webroot/scss/templates/main.scss
@@ -1,16 +1,16 @@
-#flash {
-  position : relative;
-  width    : 600px;
-  margin   : 0 auto;
-  display  : inline-block;
-}
+//#flash {
+//  position : relative;
+//  width    : 600px;
+//  margin   : 0 auto;
+//  display  : inline-block;
+//}
 
 
 main#menu.pane {
   // strange_bullseyes.jpg -> source: http://subtlepatterns.com, author: Christopher Buecheler (http://cwbuecheler.com)
   background-image    : url("../img/xtreme-red-gradient.png"), url("../img/strange_bullseyes.png");
   background-repeat   : repeat-x, repeat;
-  background-position : left 1rem, top left;
+  background-position : top left, top left;
   background-size     : 100% $topnav-height, auto auto;
 }
 
